--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,67 @@ nav {
     width: 100%;
     padding: 8px;
 }
+
+.accordion {
+    padding: 40PX 0;
+    width: 100%;
+    max-width: 600px;
+    margin: auto;
+    background-color: var(--color-principal);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    font-family: var(--font-secundaria);
+    color: var(--color-terciario);
+}
+
+.accordion-item {
+    border-bottom: 1px solid #ddd;
+}
+
+.accordion-item:last-child {
+    border-bottom: none;
+}
+
+.accordion-header {
+    border: 1PX SOLID var(--color-terciario);
+    background-color:var(--color-principal);
+    color: var(--color-terciario);
+    padding: 15px;
+    width: 100%;
+    text-align: left;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: background-color 0.3s ease;
+}
+
+.accordion-header:hover {
+    background-color:var(--color-cuartro);
+}
+
+.accordion-content {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0 15px;
+    transition: max-height 0.3s ease, padding 0.3s ease;
+}
+
+.accordion-content p {
+    padding: 15px 0;
+    margin: 0;
+    color: #555;
+}
+
+.accordion-item.active .accordion-content {
+    max-height: 150px;
+    padding: 15px;
+}
+
+.accordion-item.active .accordion-header {
+    background-color: #ddd;
+}
+
 /* Responsiveness */
 @media (max-width: 768px) {
     .nav-links {
