--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ nav {
  }
  .boton:hover {
      color: var(--color-secundario);
-     background-color: var(--color-principal);
+     background-color: transparent;
      border: 1px solid var(--color-secundario);
      padding: 10px 30PX;
      text-align: center;
@@ -340,11 +340,11 @@ nav {
 }
 
 .accordion {
-    padding: 40PX 10PX;
+    padding: 20PX 10PX 4px 10px;
     width: 100%;
     margin: auto;
     background-color: var(--color-principal);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
     font-family: var(--font-secundaria);
     color: var(--color-terciario);
   
@@ -359,7 +359,12 @@ nav {
 .accordion-item {
     border: 1px solid #ddd;
     margin: 4PX;
+    text-align: center;
     font-family: var(--font-secundaria);
+}
+.accordion-item button {
+    margin: auto;
+    text-align: center;
 }
 
 .accordion-item:last-child {
@@ -394,7 +399,7 @@ nav {
 }
 
 .accordion-content p {
-    padding: 15px 0;
+    padding: 15px 0 ;
     margin: 0;
     color: var(--color-terciario);
     font-family: var(--font-secundaria);
@@ -409,6 +414,41 @@ nav {
     background-color: var(--color-cuartro);
 }
 
+.gift-box {
+    margin-bottom: 2px;
+}
+.redes{
+    width: 92VW;
+    margin: auto;
+    background-color: var(--color-cuartro);
+    background-image:url(./IMAGENES/fondoverde.png);
+    padding: 40PX;
+    text-align: center;
+}
+.redes img {
+    width: 120px;
+    margin: auto;
+    padding: auto;
+}
+.redes h3 {
+    color: var(--color-secundario);
+    font-family: var(--font-secundaria);
+    letter-spacing: 0.1rem;
+    font-weight: lighter;
+    text-align: center;
+}
+.redes p {
+    font-family: var(--font-principal);
+    padding: 10px 0;
+}
+.redes-botones {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+   
+    margin: auto;
+    text-align: center;
+}
 /* Responsiveness */
 @media (max-width: 768px) {
     .nav-links {
