--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -31,6 +32,44 @@ header {
     top: 0;
     z-index: 1000;
 }
+
+.audiodiv {
+    max-width: 300px;
+    text-align: center; 
+    margin: 4px auto;/* Ajusta el tamaño del reproductor */
+}
+
+.mejs-container {
+    background-color:var(--color-secundario); /* Cambia el color de fondo del reproductor */
+    border-radius: 8px; /* Esquinas redondeadas */
+}
+
+.mejs-controls {
+    background-color: #34495e; /* Color de fondo de los controles */
+}
+
+.mejs-button button {
+    background-color: #e74c3c; /* Color de los botones de reproducción, pausa, etc. */
+    color: white; /* Color del icono del botón */
+}
+
+.mejs-time-rail .mejs-time-total {
+    background-color: #7f8c8d; /* Color de la barra de progreso vacía */
+}
+
+.mejs-time-rail .mejs-time-current {
+    background-color: #1abc9c; /* Color de la barra de progreso actual */
+}
+
+.mejs-volume-button .mejs-horizontal-volume-current {
+    background-color: #3498db; /* Color del control de volumen */
+}
+
+.mejs-time {
+    color: white; /* Color del texto de la duración del audio */
+}
+
+
 
 nav {
     display: flex;
